--- a/site/Index.html
+++ b/site/Index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Corsera</h1>s
+<h1>Hello Corsera! It is a great course</h1>
 </body>
 </html>
